deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: pod1-deployment
 labels:
  app: pod1
spec:
 replicas: 2
 selector:
  matchLabels:
   app: pod1
 template:
   metadata:
    labels:
     app: pod1
   spec:
     containers:
     - name: pod1 
       image: mounikathatipalli/pod1
       ports:
       - containerPort: 80
